Добавлены исправления после 1 ревью 6 спринта

--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -65,7 +65,7 @@
                     {{ comment.author.username }}
                   </a>
                 </h5>
-                <p>{{ comment.text }}</p>
+                <p>{{ comment.text|linebreaks }}</p>
               </div>
             </div>
           {% endfor %}
