--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -6,23 +6,16 @@
   <div class="container py-5">
     <h1 class="title">Все посты пользователя {{ author.get_full_name }}</h1>
     <h3 class="title">Всего постов: {{ count }}</h3><br>
+    {% if request.user != author %}
     {% if following %}
-    <a
-      class="btn btn-outline-primary"
-      href="{% url 'posts:profile_unfollow' author.username %}" role="button"
-    >
-      Отписаться
-    </a>
-  {% else %}
-      <a
-        class="btn btn-outline-primary"
-        href="{% url 'posts:profile_follow' author.username %}" role="button"
-      >
-        Подписаться
-      </a>
-   {% endif %}
-  </div>
-  <div>
+    <a class="btn btn-outline-primary" href="{% url 'posts:profile_unfollow' author.username %}"
+       role="button">Отписаться</a>
+    {% else %}
+      <a class="btn btn-outline-primary" href="{% url 'posts:profile_follow' author.username %}"
+         role="button">Подписаться</a>
+    {% endif %}
+    {% endif %}
+
     <article>
       {% for post in page_obj %}
         <ul>
@@ -31,7 +24,7 @@
           </li>
         </ul>
          {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-           <img class="card-img my-2" src="{{ im.url }}">
+           <img class="card-img my-2" src="{{ im.url }}" alt="">
          {% endthumbnail %}
         <p class="post_text">{{ post.text|truncatewords:25 }}</p>
         <p><a href="{% url 'posts:post_detail' post.pk %}" class='btn btn-outline-primary'>
