Добавлены исправления после 3 ревью 6 спринта

--- a/yatube/templates/core/404.html
+++ b/yatube/templates/core/404.html
@@ -1,7 +1,13 @@
 {% extends "base.html" %}
 {% block title %}Custom 404{% endblock %}
 {% block content %}
-  <h1>Custom 404</h1>
-  <p>Страницы с адресом {{ path }} не существует</p>
-  <a href="{% url 'posts:index' %}"> Идите на главную</a>
+
+  <div class="container py-5">
+    <h1 class="title">Custom 404</h1><br>
+    <h4>Страницы с адресом {{ path }} не существует</h4>
+    <p class="post_text"><a href="{% url 'posts:index' %}">
+      Идите на главную</a>
+    </p>
+  </div>
+
 {% endblock %}
