--- a/yatube/templates/about/tech.html
+++ b/yatube/templates/about/tech.html
@@ -16,7 +16,9 @@
     </ul>
   </aside>
   <article class="col-12 col-md-9">
-    <p>Текст страницы "Технологии"</p>
+    <div>
+      <p>Текст страницы "Технологии"</p>
+    </div>
   </article>
 </div>
 {% endblock %}
