--- a/yatube/templates/core/404.html
+++ b/yatube/templates/core/404.html
@@ -1,13 +1,11 @@
 {% extends "base.html" %}
+
 {% block title %}Custom 404{% endblock %}
 {% block content %}
-
   <div class="container py-5">
     <h1 class="title">Custom 404</h1><br>
     <h4>Страницы с адресом {{ path }} не существует</h4>
-    <p class="post_text"><a href="{% url 'posts:index' %}">
-      Идите на главную</a>
-    </p>
+    <p class="post_text"><a href="{% url 'posts:index' %}">Вернуться на главную</a></p>
   </div>
 
 {% endblock %}
