--- a/yatube/templates/core/403.html
+++ b/yatube/templates/core/403.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
+
 {% block title %}Custom 403{% endblock %}
 {% block content %}
-    <h1>Custom 403</h1>
+   <div class="container py-5">
+    <h1 class="title">Custom 403</h1><br>
+    <p class="post_text"><a href="{% url 'posts:index' %}">Вернуться на главную</a></p>
+    </div>
 {% endblock %}
