--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -26,8 +26,8 @@
         </li>
         <li class="nav-item">
           <a class="nav-link link-light
-          {% if view_name  == 'users:password_reset_form' %}active{% endif %}"
-             href="{% url 'users:password_reset_form' %}">Изменить пароль</a>
+          {% if view_name  == 'users:password_change_form' %}active{% endif %}"
+             href="{% url 'users:password_change_form' %}">Изменить пароль</a>
         </li>
         <li class="nav-item">
           <a class="nav-link link-light
