--- a/yatube/templates/posts/follow.html
+++ b/yatube/templates/posts/follow.html
@@ -1,6 +1,4 @@
 {% extends 'base.html' %}
-{% load thumbnail %}
-
 
 {% block title %}
     {{ title }}
@@ -15,10 +13,8 @@
           <h1 class="title"> {{ title }} </h1><br>
       {% endif %}
           {% for post in page_obj %}
-             {% include 'includes/posts_db.html' %}
-              {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-                <img class="card-img my-2" src="{{ im.url }}">
-              {% endthumbnail %}
+             {% include 'posts/includes/posts_db.html' %}
+             {% include 'posts/includes/thumbnail.html' %}
              <p class="post_text">{{ post.text|truncatewords:25 }}</p>
               <p><a href="{% url 'posts:post_detail' post.pk %}" class='btn btn-outline-primary'>
                Подробная информация</a></p>
