--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,15 +1,13 @@
 {% extends 'base.html' %}
-{% load thumbnail %}
+
 {% block title %} {{ group.title }} {% endblock %}
 {% block content %}
   <div class="container py-5">
       <h1>{{ group.title }}</h1><br>
       <p>{{ group.description }}</p><br>
       {% for post in page_obj%}
-        {% include 'includes/posts_db.html' %}
-        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-          <img class="card-img my-2" src="{{ im.url }}">
-        {% endthumbnail %}
+        {% include 'posts/includes/posts_db.html' %}
+        {% include 'posts/includes/thumbnail.html' %}
       <p>{{ post.text|linebreaks }}</p>
       {% include 'includes/hr.html' %}
     {% endfor %}
