--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load thumbnail %}
+
 {% block title %} Пост {{ post.text|truncatechars:30 }}
 {% endblock %}
 {% block content %}
@@ -32,9 +32,7 @@
           </ul>
         </aside>
         <article class="col-12 col-md-9">
-          {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-            <img class="card-img my-2" src="{{ im.url }}">
-          {% endthumbnail %}
+          {% include 'posts/includes/thumbnail.html' %}
           <p>{{ post.text|linebreaks }}</p>
             {% if post.author == request.user %}
           <a class='btn btn-outline-primary' href="{% url 'posts:post_edit'  post.pk %}">
@@ -65,7 +63,7 @@
                     {{ comment.author.username }}
                   </a>
                 </h5>
-                <p>{{ comment.text|linebreaks }}</p>
+                 <p class="text-break">{{ comment.text }}</p>
               </div>
             </div>
           {% endfor %}
