--- a/yatube/templates/about/tech.html
+++ b/yatube/templates/about/tech.html
@@ -16,7 +16,7 @@
   </aside>
   <article class="col-12 col-md-9">
     <div>
-      <p></p>
+      <p>Текст страницы "Технологии"</p>
     </div>
   </article>
 </div>
